5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1594_2043.log
== TEST (2019-04-04 12:52:20) 
-- CODE:
nA= float(input("nota a:"))
nB= float(input("nota b:"))
nC= float(input("nota c:"))
nD= float(input("nota d:"))

MP= (nA*1)
print(nA)
-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:53:21) 
-- CODE:
nA= float(input("nota a:"))
nB= float(input("nota b:"))
nC= float(input("nota c:"))
nD= float(input("nota d:"))

MP= (nA*1)+(nB*2)+(nC*3)+(nD*4)
print(MP)
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:53:45) 
-- CODE:
nA= float(input("nota a:"))
nB= float(input("nota b:"))
nC= float(input("nota c:"))
nD= float(input("nota d:"))

MP= (nA*1)+(nB*2)+(nC*3)+(nD*4)
print(MP)
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:54:23) 
-- CODE:
nA= float(input("nota a:"))
nB= float(input("nota b:"))
nC= float(input("nota c:"))
nD= float(input("nota d:"))

MP= (nA*1)+(nB*2)+(nC*3)+(nD*4)
print(round(MP,2)
-- ERROR:
File "XXXX", line 8
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:54:36) 
-- CODE:
nA= float(input("nota a:"))
nB= float(input("nota b:"))
nC= float(input("nota c:"))
nD= float(input("nota d:"))

MP= (nA*1)+(nB*2)+(nC*3)+(nD*4)
print(round(MP,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:54:54) 
-- CODE:
nA= float(input("nota a:"))
nB= float(input("nota b:"))
nC= float(input("nota c:"))
nD= float(input("nota d:"))

MP= (nA*1)+(nB*2)+(nC*3)+(nD*4)
print(round(MP,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:54:59) 
-- CODE:
nA= float(input("nota a:"))
nB= float(input("nota b:"))
nC= float(input("nota c:"))
nD= float(input("nota d:"))

MP= (nA*1)+(nB*2)+(nC*3)+(nD*4)
print(round(MP,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 12:55:12) 
-- CODE:
nA= float(input("nota a:"))
nB= float(input("nota b:"))
nC= float(input("nota c:"))
nD= float(input("nota d:"))

MP= (nA*1)+(nB*2)+(nC*3)+(nD*4)
print(round(MP,2))
-- EXECUTION TIME:
0.28514
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
82.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
70.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
79.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:55:33) 
-- CODE:
nA= float(input("nota a:"))
nB= float(input("nota b:"))
nC= float(input("nota c:"))
nD= float(input("nota d:"))

MP= (nA*1)+(nB*2)+(nC*3)+(nD*4)

print(round(MP,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:56:26) 
-- CODE:
nA= float(input("nota a:"))
nB= float(input("nota b:"))
nC= float(input("nota c:"))
nD= float(input("nota d:"))

MP= ((nA*1)+(nB*2)+(nC*3)+(nD*4))/4

print(round(MP,2))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:56:32) 
-- CODE:
nA= float(input("nota a:"))
nB= float(input("nota b:"))
nC= float(input("nota c:"))
nD= float(input("nota d:"))

MP= ((nA*1)+(nB*2)+(nC*3)+(nD*4))/4

print(round(MP,2))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 12:56:45) 
-- CODE:
nA= float(input("nota a:"))
nB= float(input("nota b:"))
nC= float(input("nota c:"))
nD= float(input("nota d:"))

MP= ((nA*1)+(nB*2)+(nC*3)+(nD*4))/4

print(round(MP,2))
-- EXECUTION TIME:
0.151796
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
20.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
17.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
19.84
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:58:37) 
-- CODE:
nA= float(input("nota a:"))
nB= float(input("nota b:"))
nC= float(input("nota c:"))
nD= float(input("nota d:"))

MP= ((nA*1)+(nB*2)+(nC*3)+(nD*4))/(1+2+3+4)

print(round(MP,2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 12:58:52) 
-- CODE:
nA= float(input("nota a:"))
nB= float(input("nota b:"))
nC= float(input("nota c:"))
nD= float(input("nota d:"))

MP= ((nA*1)+(nB*2)+(nC*3)+(nD*4))/(1+2+3+4)

print(round(MP,2))
-- EXECUTION TIME:
0.122309
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
